k8s/postgres-depl.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-depl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-depl
    spec:
      containers:
        - name: postgres
          image: postgres:15
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
spec:
  selector:
    app: postgres-depl
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
