k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: social-app
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: socialize.dev
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-srv
                port:
                  number: 5001

          - path: /api/post/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: post-srv
                port:
                  number: 5002
